--- a/style.css
+++ b/style.css
@@ -17,3 +17,41 @@ body {
   border-radius: 15px;
   text-align: center;
 }
+
+.heading {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.quote {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.author {
+  font-size: 25px;
+  margin: 10px;
+  font-style: italic;
+}
+
+.btn {
+  padding: 10px 70px;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-style: none;
+  border-radius: 5px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  margin-top: 15px;
+}
+
+.btn:hover {
+  background-color: #2ee59d;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(7px);
+}
